# django-async-patchup

./: .gitignore  .libcst.codemod.yaml  README.md  TODO.md  pyproject.toml
.claude/skills/improve-coverage/: SKILL.md
.github/workflows/: tests.yml
scripts/: run_codegen.sh
src/django_async_patchup/: __init__.py  registry.py  test_drift.py
src/django_async_patchup/codegen/: async_helpers.py
src/django_async_patchup/db/: __init__.py
src/django_async_patchup/db/backends/: __init__.py  utils.py
src/django_async_patchup/db/backends/base/: base.py
src/django_async_patchup/db/backends/postgresql/: __init__.py  base.py
src/django_async_patchup/db/models/: __init__.py  deletion.py  query.py  transaction.py
src/django_async_patchup/db/models/base/: __init__.py  operations.py
src/django_async_patchup/db/models/sql/: __init__.py  compiler.py  query.py  subqueries.py
tests/: conftest.py  test_compiler_coverage.py  test_coverage.py  test_drift.py  test_fallbacks.py  test_overrides.py  test_queryset_methods.py  test_thing.py
tests/app/: manage.py
tests/app/async_django_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/app/biz/: models.py  urls.py  views.py
tests/app/biz/management/commands/: create_test_data.py
tests/app/biz/migrations/: 0001_initial.py  0002_person_employee.py  0003_client_metadata.py  0004_client_updated_at.py
tests/app/biz/templates/biz/: client.html  overview.html
