[project]
name = "django-async-patchup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raphael Gaschignard", email = "raphael@rtpg.co" }
]
requires-python = ">=3.12"
dependencies = [
    "django-async-backend",
    "libcst>=1.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
django-async-backend = { git = "https://github.com/Arfey/django-async-backend" }
