[project]
name = "django-async-patchup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raphael Gaschignard", email = "raphael@rtpg.co" }
]
requires-python = ">=3.12"
dependencies = [
    "django<6.0",
    "django-async-backend",
    "libcst>=1.8.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
django-async-backend = { git = "https://github.com/Arfey/django-async-backend" }

[tool.pytest.ini_options]
pythonpath = ["tests/app", "tests"]
DJANGO_SETTINGS_MODULE = "app.async_django_project.settings"
